2007-08-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b103

 * Change: CSS consolidation for no-skin and jenskin.

2007-08-15 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b102

 * Fix: New function from b100 was broken.

2007-08-13 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b101

 * Fix: Better regexp for email check.

 Thanks to the G2 team.

2007-08-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b100

 * New: function getDefaultFilename() in lib/filesystem.php

 * Change: Local templates (without .default) can now be used.

 * Fix: Added 'up' breadcrumb in slideshow in case the returnToLink is off.

 ----- FEATURE FREEZE FOR GALLERY 1.6 ----

2007-08-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b99

 * Change: Renamed lib/Form.php to lib/form.php

2007-07-30 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b98

 * Fix: It was possible to bypass the voting permission.

2007-07-28 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b97

 * Fix: GR needs the user Agent. Now GR works again.

   Thanks to Brian Egge for fixing and sending a patch.

2007-07-24 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b96

 * Fix: Handle case where the featured item or the parentalbum of it 
		was deleted.

 * Fix: Popup code for some album actions was wrong.

 * Fix: Added popups/featured-item.php to safeToInclude array.

 Thanks to Kai Tomalik for reporting the bugs above.

2007-07-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b95

 * Fix: Use correct language domain lin lib/album.php

 * Fix: Add param for album options selectbox.

 * Change: Little css for navigator.
 
2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b94

 * Fix: Return from login/logout was broken.

 * Fix: Removed debug code in login.php

 * Fix: Make register button a popup to work correct.

 * Change: Some Layout nicify.

2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b93

 * CHANGE: Consolidate code for album commmands !!
		   - All code now in getAlbumCommands()
		   - New js function 'jopen' that handles popups and urls
		